Fix categories not wrap

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -140,6 +140,10 @@
     list-style: none;
   }
 
+  ul {
+    white-space: pre-line;
+  }
+
   li {
     display: inline-block;
     margin-right: 10px;
